# dirtoo

./: .gitignore  .gitlab-ci.yml  .pylintrc  Makefile  README.md  dirhier.py  dirtoo.desktop  dirtoo.nix  dirtool.py  dt-fileview.desktop  find.py  flake.nix  guix.scm  main.qml  move.py  pyproject.toml  qmltest.py  setup.cfg  setup.py  utf8-fsck.py
dirtoo/: __init__.py  archive_extractor.py  archive_manager.py  cmd_archive_extractor.py  cmd_archiveinfo.py  cmd_chomp.py  cmd_desktop.py  cmd_expr.py  cmd_find.py  cmd_fuzzy.py  cmd_glob.py  cmd_guessarchivename.py  cmd_metadata.py  cmd_mkevil.py  cmd_rmdir.py  cmd_swap.py  cmd_thumbnailer.py  dbus_thumbnail_cache.py  dbus_thumbnailer.py  duration.py  extractor.py  ffprobe.py  file_info.py  file_transfer.py  file_type.py  filesystem.py  format.py  fuzzy.py  libarchive_extractor.py  list_dict.py  location.py  mediainfo.py  rar_extractor.py  sevenzip_extractor.py  sort.py  tee_io.py  unique.py  util.py  xdg_desktop.py  xdg_mime_associations.py
dirtoo/archive/: __init__.py  archive_extractor.py  archive_manager.py  archiveinfo.py  extractor.py  extractor_factory.py  libarchive_extractor.py  rar_extractor.py  sevenzip_extractor.py
dirtoo/bookmark/: bookmarks.py  bookmarks_provider.py
dirtoo/expr/: __init__.py  expr.py
dirtoo/file/: file_info.py
dirtoo/filecollection/: file_collection.py  filter.py  grouper.py  sorter.py
dirtoo/filesystem/: file_info.py  location.py
dirtoo/fileview/: __init__.py  about_dialog.py  actions.py  application.py  application_actions.py  archive_directory_watcher.py  bookmarks.py  bookmarks_provider.py  conflict_dialog.py  controller.py  create_dialog.py  directory_context_menu.py  directory_thumbnailer.py  directory_watcher.py  drag_widget.py  executor.py  file_collection.py  file_graphics_scene.py  file_info.py  file_item.py  file_item_renderer.py  file_view.py  file_view_style.py  file_view_window.py  filelist_stream.py  filesystem_operations.py  filter.py  filter_command_parser.py  filter_expr_parser.py  filter_line_edit.py  filter_parser.py  gnome.py  grouper.py  gui.py  history.py  history_menu.py  history_provider.py  image_filter.py  item_context_menu.py  label.py  (+39 more)
dirtoo/filter/: filter_command_parser.py  filter_parser.py  match_func.py  match_func_factory.py
dirtoo/find/: action.py  context.py  filter.py  util.py  walk.py
dirtoo/gui/: about_dialog.py  conflict_dialog.py  create_dialog.py  directory_context_menu.py  drag_widget.py  filter_line_edit.py  history_menu.py  item_context_menu.py  label.py  leap_widget.py  location_buttonbar.py  location_lineedit.py  menu.py  message_area.py  preferences_dialog.py  properties_dialog.py  push_button.py  rename_dialog.py  search_line_edit.py  transfer_dialog.py  transfer_error_dialog.py  transfer_request_dialog.py
dirtoo/history/: __init__.py  history.py  history_provider.py
dirtoo/icons/: noun_36746_cc.xcf
dirtoo/image/: icon.py  image_filter.py
dirtoo/metadata/: metadata_collector.py
dirtoo/mime/: mime_database.py
dirtoo/posix/: filesystem.py
dirtoo/profiler/: profiler.py
dirtoo/programs/: archive_extractor.py  archiveinfo.py  chomp.py  desktop.py  dirtool.py  expr.py  fileview.py  find.py  fsck.py  fuzzy.py  glob.py  guessarchivename.py  guitest.py  icon.py  mediainfo.py  metadata.py  mime.py  mkevil.py  mktest.py  move.py  rmdir.py  shuffle.py  sleep.py  swap.py  thumbnailer.py  unidecode.py  watch.py
dirtoo/stream/: stream_manager.py
dirtoo/thumbnail/: directory_thumbnailer.py  thumbnail.py  thumbnailer.py
dirtoo/watcher/: archive_directory_watcher.py  directory_watcher.py  directory_watcher_worker.py  inotify_qt.py
dirtools/: __init__.py  archive_extractor.py  archive_manager.py  archiveinfo.py  cmd_archive_extractor.py  cmd_archiveinfo.py  cmd_chomp.py  cmd_desktop.py  cmd_dirtool.py  cmd_expr.py  cmd_fileview.py  cmd_find.py  cmd_fsck.py  cmd_fuzzy.py  cmd_glob.py  cmd_guessarchivename.py  cmd_guitest.py  cmd_hlnascii.py  cmd_icon.py  cmd_mediainfo.py  cmd_metadata.py  cmd_mime.py  cmd_mkevil.py  cmd_mktest.py  cmd_move.py  cmd_qtthumbnailer.py  cmd_rmdir.py  cmd_shuffle.py  cmd_sleep.py  cmd_swap.py  cmd_thumbnailer.py  cmd_unidecode.py  dbus_thumbnail_cache.py  dbus_thumbnailer.py  duration.py  extractor.py  extractor_worker.py  ffprobe.py  file_transfer.py  filesystem.py  (+20 more)
dirtools/expr/: __init__.py  expr.py
dirtools/fileview/: __init__.py  about_dialog.py  actions.py  app.py  application.py  application_actions.py  archive_directory_watcher.py  bookmarks.py  bookmarks_provider.py  conflict_dialog.py  controller.py  create_dialog.py  detail_file_item.py  detail_view.py  directory_context_menu.py  directory_thumbnailer.py  directory_watcher.py  drag_widget.py  executor.py  file_collection.py  file_graphics_scene.py  file_info.py  file_item.py  file_item_renderer.py  file_stream.py  file_view.py  file_view_style.py  file_view_window.py  filelist_stream.py  filesystem.py  filesystem_operations.py  filter.py  filter_command_parser.py  filter_expr_parser.py  filter_line_edit.py  filter_parser.py  find_stream.py  gnome.py  grouper.py  gui.py  (+53 more)
dirtools/find/: action.py  context.py  filter.py  util.py  walk.py
experiments/: README.md
experiments/circularreferences/: bar.py  circularreferences.py  foo.py
experiments/facedetect/: facedetect.py
experiments/filterparser/: parser.py
experiments/gaussian/: gaussian.py
experiments/inotify/: inotify.py
experiments/popup/: popup.py
experiments/pyparse/: pyparse.py
experiments/pyqtcrash/: pyqtcrash.py
experiments/pyqttest/: pyqttest.py
experiments/qgraphicperf/: qgraphicperf.py
qmltest/: main.qml  qmltest.py
tests/: test.7z  test.mkv  test.rar  test_cmd_metadata.py  test_duration.py  test_expr.py  test_ffprobe.py  test_file_info.py  test_fileview_thumbnailer.py  test_filter_parser.py  test_format.py  test_incomplete.7z  test_incomplete.rar  test_list_dict.py  test_location.py  test_mediainfo.py  test_metadata_collector.py  test_rar_extractor_worker.py  test_sevenzip_extractor_worker.py  test_tee_io.py  test_util.py
threadtest/: threadtest.py
(+102 files in other folders)
