[metadata]
name = dirtoo
version = 0.1.0
description = "File and directory manipulation tools for Python"
long_description = file: README.md
license = GPLv3+

[options]
packages = find:
include_package_data = True
install_requires =
  bytefmt
  ngram
  pyparsing
  pyxdg
  PyPDF2
  libarchive-c
  inotify_simple
  sortedcontainers
  numpy
  scipy

[options.packages.find]
exclude =
  experiments

[options.package_data]
dirtoo =
  fileview/dirtoo.svg,
  fileview/icons/*.gif,
  fileview/icons/*.png

[options.data_files]
  share/icons/hicolor/scalable/apps = dirtoo/fileview/dirtoo.svg
  share/applications = dirtoo.desktop

[options.entry_points]
gui_scripts =
  dirtoo = dirtoo.programs.fileview:main_entrypoint
console_scripts =
  dt-archive-extractor = dirtoo.programs.archive_extractor:main_entrypoint
  dt-swap = dirtoo.programs.swap:main_entrypoint
  dt-move = dirtoo.programs.move:move_main_entrypoint
  dt-copy = dirtoo.programs.move:copy_main_entrypoint
  dt-chomp = dirtoo.programs.chomp:main_entrypoint
  dt-expr = dirtoo.programs.expr:main_entrypoint
  dt-find = dirtoo.programs.find:find_entrypoint
  dt-fuzzy = dirtoo.programs.fuzzy:main_entrypoint
  dt-glob = dirtoo.programs.glob:main_entrypoint
  dt-search = dirtoo.programs.find:search_entrypoint
  dt-mkevil = dirtoo.programs.mkevil:main_entrypoint
  dt-mktest = dirtoo.programs.mktest:main_entrypoint
  dt-fsck = dirtoo.programs.fsck:main
  dt-dirtool = dirtoo.programs.dirtool:main_entrypoint
  dt-icon = dirtoo.programs.icon:main_entrypoint
  dt-mime = dirtoo.programs.mime:main_entrypoint
  dt-desktop = dirtoo.programs.desktop:main_entrypoint
  dt-unidecode = dirtoo.programs.unidecode:main
  dt-mediainfo = dirtoo.programs.mediainfo:main
  dt-archiveinfo = dirtoo.programs.archiveinfo:main_entrypoint
  dt-guessarchivename = dirtoo.programs.guessarchivename:main_entrypoint
  dt-thumbnailer = dirtoo.programs.thumbnailer:main_entrypoint
  dt-metadata = dirtoo.programs.metadata:main_entrypoint
  dt-qtthumbnailer = dirtoo.programs.qtthumbnailer:main_entrypoint
  dt-guitest = dirtoo.programs.guitest:main_entrypoint
  dt-sleep = dirtoo.programs.sleep:main_entrypoint
  dt-rmdir = dirtoo.programs.rmdir:main_entrypoint
  dt-shuffle = dirtoo.programs.shuffle:main_entrypoint

[flake8]
max-line-length = 120

[mypy]
strict = True
check_untyped_defs = True
disallow_untyped_defs = True
ignore_missing_imports = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True

# must be False, see https://github.com/python/mypy/issues/10757
disallow_untyped_calls = False

# triggered by QObject
disallow_subclassing_any = False

# Can't use this due to mypy/pyright having different ideas about cast()
warn_redundant_casts = False

[mypy-torch.*]
disallow_untyped_calls = False

[pylint]
extension-pkg-whitelist = PyQt5
disable =
  fixme,
  missing-module-docstring,
  missing-class-docstring,
  missing-function-docstring,
  logging-fstring-interpolation,
  import-outside-toplevel,
  unnecessary-lambda,
  too-many-arguments,
  too-many-locals,
  unspecified-encoding,
  consider-using-f-string,
  no-self-use,
  invalid-name,
  no-else-return

# [MESSAGES CONTROL]
# disable=
#   invalid-name,
#   missing-docstring,
#   too-many-instance-attributes,
#   too-few-public-methods,
#   no-self-use,
#   fixme,
#   unused-argument,
#   locally-disabled,
#   no-else-return,
#   too-many-locals,
#   protected-access,
#   broad-except,
#   wrong-import-position,
#   too-many-arguments,
#   unused-variable,
#   too-many-branches,
#   len-as-condition,
#   wrong-import-order,
#   too-many-nested-blocks,
#   too-many-return-statements
# generated-members=sys.stdout.buffer,sys.stderr.buffer

[pylint.FORMAT]
max-line-length = 120

# EOF #
