[metadata]
name = dirtoo
version = 0.1.0
description = "File and directory manipulation tools for Python"
long_description = file: README.md
license = GPLv3+
author = "Ingo Ruhnke"
author_email = "grumbel@gmail.com"
url = http://github.com/grumbel/dirtoo

[options]
packages = find:
include_package_data = True
install_requires =
  bytefmt
  ngram
  pyparsing
  pyxdg
  PyPDF2
  libarchive-c
  inotify_simple
  sortedcontainers
  numpy
  scipy

[options.packages.find]
exclude =
  experiments

[options.package_data]
dirtoo =
  icons/dirtoo.svg
  icons/*.gif
  icons/*.png

[options.data_files]
  share/icons/hicolor/scalable/apps = dirtoo/icons/dirtoo.svg
  share/applications = dirtoo.desktop

[options.entry_points]
gui_scripts =
  dirtoo = dirtoo.programs.fileview:main_entrypoint
console_scripts =
  dt-archive-extractor = dirtoo.programs.archive_extractor:main_entrypoint
  dt-swap = dirtoo.programs.swap:main_entrypoint
  dt-move = dirtoo.programs.move:move_main_entrypoint
  dt-copy = dirtoo.programs.move:copy_main_entrypoint
  dt-chomp = dirtoo.programs.chomp:main_entrypoint
  dt-expr = dirtoo.programs.expr:main_entrypoint
  dt-find = dirtoo.programs.find:find_entrypoint
  dt-fuzzy = dirtoo.programs.fuzzy:main_entrypoint
  dt-glob = dirtoo.programs.glob:main_entrypoint
  dt-search = dirtoo.programs.find:search_entrypoint
  dt-mkevil = dirtoo.programs.mkevil:main_entrypoint
  dt-mktest = dirtoo.programs.mktest:main_entrypoint
  dt-fsck = dirtoo.programs.fsck:main
  dt-dirtool = dirtoo.programs.dirtool:main_entrypoint
  dt-icon = dirtoo.programs.icon:main_entrypoint
  dt-mime = dirtoo.programs.mime:main_entrypoint
  dt-desktop = dirtoo.programs.desktop:main_entrypoint
  dt-unidecode = dirtoo.programs.unidecode:main
  dt-mediainfo = dirtoo.programs.mediainfo:main
  dt-archiveinfo = dirtoo.programs.archiveinfo:main_entrypoint
  dt-guessarchivename = dirtoo.programs.guessarchivename:main_entrypoint
  dt-thumbnailer = dirtoo.programs.thumbnailer:main_entrypoint
  dt-metadata = dirtoo.programs.metadata:main_entrypoint
  dt-qtthumbnailer = dirtoo.programs.qtthumbnailer:main_entrypoint
  dt-guitest = dirtoo.programs.guitest:main_entrypoint
  dt-sleep = dirtoo.programs.sleep:main_entrypoint
  dt-rmdir = dirtoo.programs.rmdir:main_entrypoint
  dt-shuffle = dirtoo.programs.shuffle:main_entrypoint
  dt-watch = dirtoo.programs.watch:main_entrypoint

[flake8]
max-line-length = 120

[mypy]
strict = True
check_untyped_defs = True
disallow_untyped_defs = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True
ignore_missing_imports = True

# must be False, see https://github.com/python/mypy/issues/10757
disallow_untyped_calls = False

# triggered by QObject
disallow_subclassing_any = False

# Can't use this due to mypy/pyright having different ideas about cast()
warn_redundant_casts = False

[mypy-torch.*]
disallow_untyped_calls = False

[mypy-dirtoo.*]
ignore_missing_imports = False

[mypy-tests.*]
ignore_missing_imports = False

[pylint]
extension-pkg-whitelist = PyQt5
disable =
  broad-except,
  consider-using-f-string,
  consider-using-in,
  duplicate-code,
  fixme,
  import-outside-toplevel,
  invalid-name,
  logging-format-interpolation,
  logging-fstring-interpolation,
  missing-class-docstring,
  missing-function-docstring,
  missing-module-docstring,
  no-else-return,
  no-self-use,
  protected-access,
  superfluous-parens,
  too-few-public-methods,
  too-many-arguments,
  too-many-branches,
  too-many-instance-attributes,
  too-many-locals,
  too-many-public-methods,
  too-many-return-statements,
  too-many-statements,
  unnecessary-lambda,
  unspecified-encoding,
  unused-argument,
  unused-variable,
  using-constant-test,
  too-many-nested-blocks,
  use-implicit-booleaness-not-comparison,
  consider-using-from-import,
  useless-super-delegation,
  consider-iterating-dictionary,

[pylint.FORMAT]
max-line-length = 120

# EOF #
